add profile route
