# routes/profile.js
@@ -1,0 +1,8 @@
+const express = require('express')
+const router = express.Router()
+const { requiresAuth } = require('express-openid-connect')
+const { getUserProfile } = require('../controllers/profile')
+
+router.get('/', requiresAuth(), getUserProfile)
+
+module.exports = router
